[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/flowchart_menus/flowchart_theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/upgrade_menu_2/UpgradeMenu2.gd" type="Script" id=2]
[ext_resource path="res://ui/flowchart_menus/BG_red.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/flowchart_menus/icons8-go-back--white-30.png" type="Texture" id=4]
[ext_resource path="res://menus/upgrade_menu_2/Scene1.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/flowchart_menus/BG_white_grey-border.tres" type="StyleBox" id=6]
[ext_resource path="res://menus/upgrade_menu_2/Scene2.tscn" type="PackedScene" id=7]
[ext_resource path="res://menus/upgrade_menu_2/Scene3.tscn" type="PackedScene" id=8]
[ext_resource path="res://menus/upgrade_menu_2/AllSettings.tscn" type="PackedScene" id=9]
[ext_resource path="res://menus/upgrade_menu_2/Setting.tscn" type="PackedScene" id=10]
[ext_resource path="res://menus/upgrade_menu_2/Popup.tscn" type="PackedScene" id=11]

[node name="Node" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 40
custom_constants/margin_top = 20
custom_constants/margin_left = 40
custom_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 40.0
margin_top = 20.0
margin_right = 504.0
margin_bottom = 286.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
margin_right = 464.0
margin_bottom = 266.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 464.0
margin_bottom = 30.0
custom_styles/panel = ExtResource( 3 )

[node name="BackButton" type="TextureButton" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer"]
margin_right = 30.0
margin_bottom = 30.0
size_flags_horizontal = 0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 4 )
texture_focused = ExtResource( 4 )

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer"]
margin_top = 1.0
margin_right = 464.0
margin_bottom = 29.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "RichCorp, Inc."
align = 1

[node name="ContentContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 464.0
margin_bottom = 266.0
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Scene1" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 222.0

[node name="Label" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1" index="0"]
margin_right = 444.0
margin_bottom = 147.0

[node name="ExitButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1" index="1"]
margin_top = 151.0
margin_right = 444.0
margin_bottom = 180.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_colors/font_color = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_colors/font_color_hover = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_colors/font_color_pressed = Color( 0.545098, 0.545098, 0.545098, 1 )

[node name="Scene1Button" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1" index="2"]
margin_top = 184.0
margin_right = 444.0
margin_bottom = 212.0

[node name="Scene2" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 222.0

[node name="Label" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2" index="0"]
margin_right = 444.0
margin_bottom = 28.0

[node name="RichTextLabel" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2" index="1"]
margin_top = 32.0
margin_right = 444.0
margin_bottom = 147.0

[node name="ManageButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2" index="2"]
margin_top = 151.0
margin_right = 444.0
margin_bottom = 180.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_colors/font_color_disabled = Color( 0.545098, 0.545098, 0.545098, 1 )
custom_colors/font_color = Color( 0.546875, 0.546875, 0.546875, 1 )
custom_colors/font_color_hover = Color( 0.546875, 0.546875, 0.546875, 1 )

[node name="AgreeButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2" index="3"]
margin_top = 184.0
margin_right = 444.0
margin_bottom = 212.0

[node name="Scene3" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 222.0

[node name="Label" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3" index="0"]
margin_right = 444.0
margin_bottom = 28.0

[node name="ReturnButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3" index="1"]
margin_top = 178.0
margin_right = 444.0
margin_bottom = 206.0

[node name="AllSettings" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" instance=ExtResource( 9 )]
editor/display_folded = true
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 222.0

[node name="LinkButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings" index="0"]
margin_right = 444.0
margin_bottom = 23.0

[node name="LinkButton2" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings" index="1"]
margin_top = 27.0
margin_right = 444.0
margin_bottom = 50.0

[node name="LinkButton3" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings" index="2"]
margin_top = 54.0
margin_right = 444.0
margin_bottom = 77.0

[node name="SaveButton" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings" index="3"]
margin_top = 178.0
margin_right = 444.0
margin_bottom = 206.0

[node name="Setting" parent="MarginContainer/PanelContainer/VBoxContainer/ContentContainer" instance=ExtResource( 10 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 454.0
margin_bottom = 222.0

[node name="Popup" parent="MarginContainer/PanelContainer" instance=ExtResource( 11 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 464.0
margin_bottom = 266.0

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/PanelContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1/Scene1Button" to="." method="_on_Scene1Button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2/ManageButton" to="." method="_on_ManageButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2/AgreeButton" to="." method="_on_AgreeButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings/LinkButton2" to="." method="_on_LinkButton2_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings/LinkButton3" to="." method="_on_LinkButton3_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Setting/Button" to="." method="_on_Button_pressed"]

[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene1"]

[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene2"]

[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Scene3"]

[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/AllSettings"]

[editable path="MarginContainer/PanelContainer/VBoxContainer/ContentContainer/Setting"]
